se agrega foto preview y se crea carpeta para ubicar imgs.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dibujo Kirby con css</title>
     <link rel="stylesheet" href="estilos.css">
-    <link rel="icon" href="palette-solid.svg" type="image/x-icon">
+    <link rel="icon" href="img/palette-solid.svg" type="image/x-icon">
 </head>
 
 <body>
